@startuml
!theme plain
title Event Echo - Database Entities

entity "users" as users {
  *user_id : serial <<PK>>
  --
  *email : varchar(255) <<unique>>
  *password_hash : text
  first_name : varchar(100)
  last_name : varchar(100)
  role : varchar(50)
  created_at : timestamp
  major_department : varchar(100)
  phone_number : varchar(20)
  hobbies : text
  bio : text
  profile_picture : text
}

entity "events" as events {
  *event_id : serial <<PK>>
  --
  *title : varchar(200)
  description : text
  *start_time : timestamp
  *end_time : timestamp
  location_type : varchar(20)
  venue_id : int <<FK>>
  custom_location_address : text
  visibility : varchar(20)
  organizer_id : int <<FK>>
  created_by : int <<FK>>
  status : varchar(50)
}

entity "venues" as venues {
  *venue_id : serial <<PK>>
  --
  name : varchar(100)
  building : varchar(100)
  room_number : varchar(50)
  google_maps_link : text
}

entity "rsvps" as rsvps {
  *user_id : int <<PK, FK>>
  *event_id : int <<PK, FK>>
  --
  rsvp_status : varchar(50)
}

entity "planning_tasks" as planning_tasks {
  *task_id : serial <<PK>>
  --
  event_id : int <<FK>>
  title : varchar(200)
  status : varchar(50)
  assigned_to : int <<FK>>
}

entity "event_reviews" as event_reviews {
  *review_id : serial <<PK>>
  --
  event_id : int <<FK>>
  user_id : int <<FK>>
  rating : int
  review_text : text
  created_at : timestamp
}

users ||..o{ events : "organizes"
users ||..o{ rsvps : "attends"
users ||..o{ planning_tasks : "assigned_to"
users ||..o{ event_reviews : "writes"

events ||..o{ rsvps : "has"
events ||..o{ planning_tasks : "has"
events ||..o{ event_reviews : "has"
events }|..|| venues : "located_at"

@enduml
